# gpgsync

./: Cargo.toml  LICENSE  README.md
src/: fileread.rs  filesync.rs  fileutils.rs  gpg.rs  gpgsync.rs  lib.rs  main.rs  notes.txt.gpg  notifier.rs  syncdb.rs  syncentity.rs
src/rewrite/: diff.rs  fs_ops.rs  fs_utils.rs  merge.rs  mod.rs  notifier.rs  path_aggregator.rs  test_utils.rs  tree.rs  update.rs
src/tests/: integration_tests.rs
