[package]
name = "gpgsync"
version = "0.1.0"
authors = ["Felix Monninger <felix.monninger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1"
notify = "4.0.15"
md-5 = "0.9.0"
gpgme = "0.9"
ignore = "0.4"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1"
